test/visibility/except/noResolveConflict.good
noResolveConflict.chpl:2: error: Symbol foo multiply defined
noResolveConflict.chpl:11: error: Symbol foo multiply defined
